chore: practice let var const

--- a/hoisting.html
+++ b/hoisting.html
@@ -12,12 +12,19 @@
     <button onclick="func1()">Click me</button>
 
     <script>
-        function myFunction() {
-            alert("Button clicked!");
-        }
+        var x=1;
         console.log(x);
         func1();
-        
+        function a() 
+        {
+            var x=150;
+            console.log(x);
+        }
+        function b() 
+        {
+            var x=20;
+            console.log(x);
+        }
         console.log(func1);
         console.log(func2);
         // func2();
